--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -59,7 +59,7 @@ prioritize-experience=تحديد أولوية الخبرة
 publish-page=نشر الصفحة
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=تقليل عدد الأعمدة سيؤدي إلى فقدان المحتوى المضاف إلى الأعمدة المحذوفة. هل أنت متأكد من أنك تريد المتابعة؟
 remove-background=إزالة الخلفية
-reopen=Reopen (Automatic Copy)
+reopen=فتح (Automatic Translation)
 restore-values=استعادة القيم
 saved=محفوظ
 saving-changes=جار حفظ التغييرات...
@@ -75,7 +75,7 @@ select-template=تحديد قالب (Automatic Translation)
 select-the-content-source-for-this-display-page-template=حدد مصدر المحتوى لقالب صفحة العرض هذه.
 self=ذاتي
 show-editable-areas=إظهار المناطق القابلة للتحرير
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=إظهار التعليقات التي تم حلها (Automatic Translation)
 space-between-columns=مسافة بين الأعمدة
 specific-content=محتوى خاص
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=عرض الاستخدامات (Automatic Translation)
 widgets=عناصر واجهة المستخدم
 x-default={0} (افتراضي)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=ليس لديك أي أقسام.
