--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
@@ -59,7 +59,7 @@ prioritize-experience=Приоритизирайте опита (Automatic Trans
 publish-page=Публикуване на страница (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Намаляване на броя на колоните ще загубят съдържание, добавени в изтрити колони. Наистина ли искате да продължите? (Automatic Translation)
 remove-background=Премахни фона (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Reopen (Automatic Translation)
 restore-values=Възстановяване на стойности (Automatic Translation)
 saved=Записани (Automatic Translation)
 saving-changes=Записване на промени... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Избор на шаблон (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Изберете източника на съдържание за този шаблон на показвана страница. (Automatic Translation)
 self=Самостоятелно (Automatic Translation)
 show-editable-areas=Показване на редактируеми области (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Показване на разрешени коментари (Automatic Translation)
 space-between-columns=Разстояние между колоните (Automatic Translation)
 specific-content=Специфично съдържание (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Преглед на Увите (Automatic Translation)
 widgets=Джаджи (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Нямате никакви секции. (Automatic Translation)
