--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
@@ -59,7 +59,7 @@ prioritize-experience=Donner la priorité à l'expérience
 publish-page=Publier la page
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Si vous réduisez le nombre de colonnes, vous perdrez le contenu ajouté aux colonnes supprimées. Voulez-vous continuer ?
 remove-background=Supprimer le fond
-reopen=Reopen (Automatic Copy)
+reopen=rouvrir (Automatic Translation)
 restore-values=Restaurer les valeurs
 saved=Sauvegarder
 saving-changes=Enregistrement des modifications...
@@ -75,7 +75,7 @@ select-template=Sélectionnez Template (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Sélectionnez la source de contenu pour ce modèle de page d'affichage.
 self=Soi
 show-editable-areas=Afficher les Zones Modifiables
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Afficher les commentaires résolus (Automatic Translation)
 space-between-columns=Espace entre les colonnes
 specific-content=Contenu spécifique
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Afficher les utilisations (Automatic Translation)
 widgets=Widgets
 x-default={0} (par défaut)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Vous n'avez aucune section.
