--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -59,7 +59,7 @@ prioritize-experience=Élmény prioritása magas
 publish-page=Oldal közzététele
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Az oszlopok számának csökkentése a törölt oszlopok tartalmának elvesztésével jár. Kívánja folytatni?
 remove-background=Háttér eltávolítása
-reopen=Reopen (Automatic Copy)
+reopen=Újra kinyit (Automatic Translation)
 restore-values=Értékek visszaállítása
 saved=Mentve
 saving-changes=Módosítások mentése...
@@ -75,7 +75,7 @@ select-template=Sablon választása (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Válasszon tartalomforrást a megjelenítési-oldal sablonhoz.
 self=Önálló
 show-editable-areas=Szerkeszthető területek megjelenítése
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Feloldott megjegyzések megjelenítése (Automatic Translation)
 space-between-columns=Oszlopok közötti hely
 specific-content=Specifikus tartalom
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Usages megtekintése (Automatic Translation)
 widgets=Widgetek
 x-default={0} (alapértelmezett)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Nincsenek szakaszai.
