--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
@@ -59,7 +59,7 @@ prioritize-experience=Prioritaskan pengalaman (Automatic Translation)
 publish-page=Mempublikasikan Halaman (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Mengurangi jumlah kolom akan kehilangan konten yang ditambahkan ke kolom dihapus. Apakah Anda yakin Anda ingin melanjutkan? (Automatic Translation)
 remove-background=Hapus background (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Membuka kembali (Automatic Translation)
 restore-values=Pulihkan nilai (Automatic Translation)
 saved=Disimpan (Automatic Translation)
 saving-changes=Menyimpan perubahan... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Pilih template (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Pilih sumber konten untuk template halaman tampilan ini. (Automatic Translation)
 self=Diri (Automatic Translation)
 show-editable-areas=Daerah dapat diedit Tampilkan (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Tampilkan terselesaikan komentar (Automatic Translation)
 space-between-columns=Ruang antara kolom (Automatic Translation)
 specific-content=Konten khusus (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Lihat penggunaan (Automatic Translation)
 widgets=Widget (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Anda tidak memiliki setiap bagian. (Automatic Translation)
