--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
@@ -59,7 +59,7 @@ prioritize-experience=Dare priorità all'esperienza (Automatic Translation)
 publish-page=Pubblicare la pagina (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Riducendo il numero di colonne perderà il contenuto aggiunto a colonne eliminate. Sei sicuro di che voler procedere? (Automatic Translation)
 remove-background=Rimuovi sfondo (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=riaprirsi (Automatic Translation)
 restore-values=Ripristina valori (Automatic Translation)
 saved=Salvato (Automatic Translation)
 saving-changes=Salvare le modifiche... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Seleziona modello (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Selezionare l'origine del contenuto per questo modello di pagina di visualizzazione. (Automatic Translation)
 self=stesso (Automatic Translation)
 show-editable-areas=Visualizza aree modificabili (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Mostra commenti risolti (Automatic Translation)
 space-between-columns=Spazio tra le colonne (Automatic Translation)
 specific-content=Contenuto specifico (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Visualizza utilizzi (Automatic Translation)
 widgets=Widget (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Non hai tutte le sezioni. (Automatic Translation)
