--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
@@ -59,7 +59,7 @@ prioritize-experience=Pirmenybė patirčiai (Automatic Translation)
 publish-page=Skelbti puslapis (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Stulpelių skaičiaus mažinimas bus prarasti pridėti prie panaikintų stulpelių turinys. Ar tikrai norite tęsti? (Automatic Translation)
 remove-background=Pašalinti foną (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Atnaujinti (Automatic Translation)
 restore-values=Atkurti reikšmes (Automatic Translation)
 saved=Išsaugota (Automatic Translation)
 saving-changes=Išsaugoti pakeitimus... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Pasirinkite šablonas (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Pasirinkite šio rodymo puslapio šablono turinio šaltinį. (Automatic Translation)
 self=Savarankiškai (Automatic Translation)
 show-editable-areas=Rodyti redaguojamas sritis (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Rodyti išspręstus komentarus (Automatic Translation)
 space-between-columns=Atstumas tarp stulpelių (Automatic Translation)
 specific-content=Konkretus turinys (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Peržiūrėti Paproimus (Automatic Translation)
 widgets=Raštai (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Jūs neturite jokių sekcijų. (Automatic Translation)
