--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -59,7 +59,7 @@ prioritize-experience=Prioriter opplevelse (Automatic Translation)
 publish-page=Publiser side (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Redusere antall kolonner vil miste innholdet lagt til de slettede kolonnene. Er du sikker på at du vil fortsette? (Automatic Translation)
 remove-background=Fjern bakgrunn (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Åpne (Automatic Translation)
 restore-values=Gjenopprett verdier (Automatic Translation)
 saved=Lagret (Automatic Translation)
 saving-changes=Lagrer endringer... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Velg mal (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Velg innholdskilden for denne visningsside malen. (Automatic Translation)
 self=Selv (Automatic Translation)
 show-editable-areas=Vis redigerbare områder (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Vis løste kommentarer (Automatic Translation)
 space-between-columns=Avstanden mellom kolonnene (Automatic Translation)
 specific-content=Spesifikt innhold (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Vis bruksområder (Automatic Translation)
 widgets=Widgets (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Du har ikke noen deler. (Automatic Translation)
