--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
@@ -59,7 +59,7 @@ prioritize-experience=Priorytetyzacja doświadczenia (Automatic Translation)
 publish-page=Opublikować stronę (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Zmniejszenie liczby kolumn spowoduje utratę treści dodawane do kolumny usunięte. Czy na pewno chcesz kontynuować? (Automatic Translation)
 remove-background=Usuń tło (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Ponownie (Automatic Translation)
 restore-values=Przywróć wartości (Automatic Translation)
 saved=Zapisano na (Automatic Translation)
 saving-changes=Zapisywanie zmian... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Wybierz szablon (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Wybierz źródło zawartości dla tego szablonu strony wyświetlanej. (Automatic Translation)
 self=Siebie (Automatic Translation)
 show-editable-areas=Pokaż obszary edytowalne (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Pokaż rozwiązane Komentarze (Automatic Translation)
 space-between-columns=Odstęp między kolumnami (Automatic Translation)
 specific-content=Konkretna treść (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Zobacz zwyczaje (Automatic Translation)
 widgets=Widgety (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Nie masz żadnych części. (Automatic Translation)
