--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
@@ -59,7 +59,7 @@ prioritize-experience=Priorizar experiência
 publish-page=Publicar página
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Reduzir o número de colunas fará com que o conteúdo adicionado nas colunas excluídas seja perdido. Tem certeza que deseja continuar?
 remove-background=Remover Plano de Fundo
-reopen=Reopen (Automatic Copy)
+reopen=Reabrir (Automatic Translation)
 restore-values=Restaurar valores
 saved=Salvo
 saving-changes=Salvando alterações...
@@ -75,7 +75,7 @@ select-template=Selecionar modelo (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Selecione a fonte do conteúdo para este modelo de página de exibição.
 self=Auto
 show-editable-areas=Mostrar áreas editáveis
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Mostrar comentários resolvidos (Automatic Translation)
 space-between-columns=Espaço entre colunas
 specific-content=Conteúdo específico
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Visualizar usos (Automatic Translation)
 widgets=Widgets
 x-default={0} (Padrão)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Você não possui nenhuma seção.
