--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
@@ -59,7 +59,7 @@ prioritize-experience=Prioritizați experiența (Automatic Translation)
 publish-page=Publicaţi pagina (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Reducerea numărului de coloane va pierde conţinutul adăugat la coloanele şterse. Sunteţi sigur că doriţi să continuaţi? (Automatic Translation)
 remove-background=Eliminare fundal (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Redeschideți (Automatic Translation)
 restore-values=Restabilire valori (Automatic Translation)
 saved=Salvate (Automatic Translation)
 saving-changes=Salvarea modificărilor... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Selectare șablon (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Selectați sursa de conținut pentru acest șablon de pagină de afișare. (Automatic Translation)
 self=Auto (Automatic Translation)
 show-editable-areas=Arată zone editabile (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Afișare comentarii rezolvate (Automatic Translation)
 space-between-columns=Spaţiu între coloane (Automatic Translation)
 specific-content=Continut specific (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Vezi Usages (Automatic Translation)
 widgets=Widget-uri (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Nu aveţi orice secţiuni. (Automatic Translation)
