--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
@@ -59,7 +59,7 @@ prioritize-experience=Prednost izkušnje (Automatic Translation)
 publish-page=Objaviti stran (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Zmanjšanje števila stolpcev izgubili vsebino dodati izbrisane stolpce. Ali ste prepričani, da želite nadaljevati? (Automatic Translation)
 remove-background=Odstrani ozadje (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Ponovno odpre (Automatic Translation)
 restore-values=Obnovi vrednosti (Automatic Translation)
 saved=Shranjene (Automatic Translation)
 saving-changes=Zimski... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Izberite predloga (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Izberite vir vsebine za to predlogo strani za prikaz. (Automatic Translation)
 self=Samo (Automatic Translation)
 show-editable-areas=Pokaži Editable območja (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Pokaži razrešene Komentarje (Automatic Translation)
 space-between-columns=Presledek med stolpci (Automatic Translation)
 specific-content=Posebna vsebina (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Ogled Usages (Automatic Translation)
 widgets=Pripomočki (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Nimate odseki. (Automatic Translation)
