--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
@@ -59,7 +59,7 @@ prioritize-experience=Tecrübe önceliğini belirleme (Automatic Translation)
 publish-page=Yayımla sayfası (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Sütun sayısını azaltmak için Silinen sütunlar eklenen içeriği kaybedeceksiniz. Devam etmek istediğinizden emin misiniz? (Automatic Translation)
 remove-background=Arka planı kaldır (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Yeni -den açtığı (Automatic Translation)
 restore-values=Geri yükleme değerleri (Automatic Translation)
 saved=Kaydedilen (Automatic Translation)
 saving-changes=Değişiklikleri kaydediliyor... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Şablon seç (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Bu ekran sayfası şablonunun içerik kaynağını seçin. (Automatic Translation)
 self=Öz (Automatic Translation)
 show-editable-areas=Düzenlenebilir alanları göster: (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Çözümlenmiş Yorumları Göster (Automatic Translation)
 space-between-columns=Sütunlar arasındaki boşluk (Automatic Translation)
 specific-content=Spesifik Içerik (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Kullanım görünümü (Automatic Translation)
 widgets=Widget'ları (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Herhangi bir bölüm var mı. (Automatic Translation)
