--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
@@ -59,7 +59,7 @@ prioritize-experience=Досвід пріоритезації (Automatic Transla
 publish-page=Опублікувати сторінку (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Зменшення кількості стовпців втратить зміст, додані до видалені стовпці. Справді продовжити? (Automatic Translation)
 remove-background=Видалити фон (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Відкрити (Automatic Translation)
 restore-values=Відновити значення (Automatic Translation)
 saved=Збережені (Automatic Translation)
 saving-changes=Збереження змін... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Виберіть шаблон (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Виберіть Джерело вмісту для цього шаблона відображення. (Automatic Translation)
 self=Самоврядування (Automatic Translation)
 show-editable-areas=Показати редагованими областями (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Показати вирішені коментарі (Automatic Translation)
 space-between-columns=Інтервал між колонками (Automatic Translation)
 specific-content=Конкретний вміст (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Переглянути звичаї (Automatic Translation)
 widgets=Віджети (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Ви не маєте будь-які розділи. (Automatic Translation)
