--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
@@ -59,7 +59,7 @@ prioritize-experience=Kinh nghiệm ưu tiên (Automatic Translation)
 publish-page=Xuất bản trang (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Việc giảm số lượng các cột sẽ mất nội dung được thêm vào để xóa cột. Bạn có chắc bạn muốn tiếp tục không? (Automatic Translation)
 remove-background=Loại bỏ nền (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Mở lại (Automatic Translation)
 restore-values=Khôi phục giá trị (Automatic Translation)
 saved=Lưu (Automatic Translation)
 saving-changes=Lưu thay đổi... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Chọn mẫu (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Chọn nguồn nội dung cho mẫu trang hiển thị này. (Automatic Translation)
 self=Tự (Automatic Translation)
 show-editable-areas=Hiển thị các khu vực có thể chỉnh sửa (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Hiện ý kiến giải quyết (Automatic Translation)
 space-between-columns=Không gian giữa các cột (Automatic Translation)
 specific-content=Nội dung cụ thể (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Xem Usages (Automatic Translation)
 widgets=Vật dụng (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Bạn không có bất kỳ phần của nó. (Automatic Translation)
