--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
@@ -59,7 +59,7 @@ prioritize-experience=优先处理体验
 publish-page=发布页面
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=减少列数将丢失添加到已删除列的内容。您确定要继续吗？
 remove-background=移除背景
-reopen=Reopen (Automatic Copy)
+reopen=重新 (Automatic Translation)
 restore-values=还原值
 saved=已保存
 saving-changes=正在保存更改…
@@ -75,7 +75,7 @@ select-template=选择模板 (Automatic Translation)
 select-the-content-source-for-this-display-page-template=选择此显示页面模板的内容源。
 self=自身
 show-editable-areas=显示可编辑区域
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=显示已解决的注释 (Automatic Translation)
 space-between-columns=列之间的间距
 specific-content=特定内容
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=查看用法 (Automatic Translation)
 widgets=微件
 x-default={0}（默认）
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=您没有任何部分。
