--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -59,7 +59,7 @@ prioritize-experience=Prioritza l'experiència
 publish-page=Publica la pàgina
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Reduir el nombre de columnes farà que es perdi el contingut afegit a les columnes suprimides. Segur que voleu continuar?
 remove-background=Treu el fons
-reopen=Reopen (Automatic Copy)
+reopen=Reobrir (Automatic Translation)
 restore-values=Restaura els valors
 saved=Modificat
 saving-changes=S'estan desant els canvis...
@@ -75,7 +75,7 @@ select-template=Seleccioneu plantilla (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Seleccioneu la font del contingut de la plantilla d'aquesta pàgina de visualització.
 self=Jo
 show-editable-areas=Mostra les àrees editables
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Mostra els comentaris resolts (Automatic Translation)
 space-between-columns=Espai entre columnes
 specific-content=Contingut específic
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Veure Usages (Automatic Translation)
 widgets=Ginys
 x-default={0} (Per defecte)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=No teniu cap secció.
