--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
@@ -59,7 +59,7 @@ prioritize-experience=Určit prioritu zkušeností (Automatic Translation)
 publish-page=Publikování stránky (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Snížení počtu sloupců ztratí obsah přidaný do odstraněné sloupce. Opravdu že chcete pokračovat? (Automatic Translation)
 remove-background=Odebrat pozadí (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Znovu (Automatic Translation)
 restore-values=Obnovit hodnoty (Automatic Translation)
 saved=Uloženo v (Automatic Translation)
 saving-changes=Ukládání změn... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Vybrat šablonu (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Vyberte zdroj obsahu pro tuto šablonu stránky zobrazení. (Automatic Translation)
 self=Já (Automatic Translation)
 show-editable-areas=Zobrazit upravitelných oblastí (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Zobrazit vyřešené komentáře (Automatic Translation)
 space-between-columns=Mezera mezi sloupci (Automatic Translation)
 specific-content=Specifický obsah (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Zobrazit použití (Automatic Translation)
 widgets=Widgety (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Nemáte žádné oddíly. (Automatic Translation)
