--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
@@ -59,7 +59,7 @@ prioritize-experience=Προτεραιότητα εμπειρίας (Automatic T
 publish-page=Δημοσίευση σελίδας (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Μείωση του αριθμού των στηλών θα χάσετε περιεχομένου που προστίθενται στις στήλες διαγράφεται. Είστε βέβαιοι ότι θέλετε να συνεχίσετε; (Automatic Translation)
 remove-background=Κατάργηση φόντου (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Ανοίξετε ξανά (Automatic Translation)
 restore-values=Επαναφορά τιμών (Automatic Translation)
 saved=Αποθηκεύτηκε σε (Automatic Translation)
 saving-changes=Αποθήκευση των αλλαγών... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Επιλογή προτύπου (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Επιλέξτε την προέλευση περιεχομένου για αυτό το πρότυπο σελίδας εμφάνισης. (Automatic Translation)
 self=Αυτο (Automatic Translation)
 show-editable-areas=Εμφάνιση επεξεργάσιμων περιοχών (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Εμφάνιση σχολίων που έχουν επιλυθεί (Automatic Translation)
 space-between-columns=Διάστημα μεταξύ των στηλών (Automatic Translation)
 specific-content=Συγκεκριμένο περιεχόμενο (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Προβολή Χρήσουςετών (Automatic Translation)
 widgets=Γραφικά στοιχεία (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Δεν έχετε οποιεσδήποτε ενότητες. (Automatic Translation)
