--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -59,7 +59,7 @@ prioritize-experience=Aumentar prioridad de experiencia
 publish-page=Publicar página
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Al reducir el número de columnas, se perderá el contenido añadido a las columnas eliminadas. ¿Está seguro de que quiere continuar?
 remove-background=Quitar fondo
-reopen=Reopen (Automatic Copy)
+reopen=Reabrir (Automatic Translation)
 restore-values=Restaurar valores
 saved=Guardado
 saving-changes=Guardando cambios…
@@ -75,7 +75,7 @@ select-template=Seleccionar plantilla (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Seleccione el origen de contenido para esta plantilla de página de visualización.
 self=Auto
 show-editable-areas=Mostrar áreas editables
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Mostrar comentarios resueltos (Automatic Translation)
 space-between-columns=Espacio entre columnas
 specific-content=Contenido específico
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Ver usos (Automatic Translation)
 widgets=Widgets
 x-default={0} (por defecto)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=No tiene ninguna sección.
