--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
@@ -59,7 +59,7 @@ prioritize-experience=Tähtsusjärjesta kogemus (Automatic Translation)
 publish-page=Lehe avaldamine (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Veergude arvu ise sisu on kustutatud veerud. Kas soovite kindlasti jätkata? (Automatic Translation)
 remove-background=Eemalda taust (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Avage (Automatic Translation)
 restore-values=Taasta väärtused (Automatic Translation)
 saved=Salvestatud (Automatic Translation)
 saving-changes=Muudatused... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Malli valimine (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Saate valida kuvatava lehemalli sisuallika. (Automatic Translation)
 self=Ise (Automatic Translation)
 show-editable-areas=Näita muudetav piirkondades (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Kuva lahendatud kommentaarid (Automatic Translation)
 space-between-columns=Vahe veergude vahel (Automatic Translation)
 specific-content=Konkreetne sisu (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Vaata Usages (Automatic Translation)
 widgets=Vidinad (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Teil pole jaotisi. (Automatic Translation)
