--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -59,7 +59,7 @@ prioritize-experience=اولویت بندی تجربه (Automatic Translation)
 publish-page=صفحه را منتشر (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=کاهش تعداد ستون مطالب اضافه شده به ستون های حذف شده از دست خواهد داد. آیا می خواهید ادامه دهید؟ (Automatic Translation)
 remove-background=حذف پس زمینه (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=بازگشایی (Automatic Translation)
 restore-values=برگرداندن مقادیر (Automatic Translation)
 saved=ذخیره شده
 saving-changes=ذخیره تغییرات... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=انتخاب الگو (Automatic Translation)
 select-the-content-source-for-this-display-page-template=منبع محتوای این الگو صفحه نمایش را انتخاب کنید. (Automatic Translation)
 self=خود
 show-editable-areas=نمایش مناطق قابل ویرایش (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=نمایش نظرات حل و فصل (Automatic Translation)
 space-between-columns=فاصله بین ستونها (Automatic Translation)
 specific-content=محتوای خاص (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=مشاهده موارد کاربرد (Automatic Translation)
 widgets=ویجت ها
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=هر بخش را ندارند. (Automatic Translation)
