--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
@@ -59,7 +59,7 @@ prioritize-experience=מתן עדיפות לניסיון (Automatic Translation)
 publish-page=פרסום דף (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=הפחתת מספר העמודות, תאבד את התוכן שנוסף לעמודות שנמחקו. האם אתה בטוח שברצונך להמשיך? (Automatic Translation)
 remove-background=הסר רקע (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=פתוח (Automatic Translation)
 restore-values=שחזור ערכים (Automatic Translation)
 saved=הציל (Automatic Translation)
 saving-changes=שמירת שינויים... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=בחר תבנית (Automatic Translation)
 select-the-content-source-for-this-display-page-template=בחר את מקור התוכן עבור תבנית דף תצוגה זו. (Automatic Translation)
 self=האני (Automatic Translation)
 show-editable-areas=מראים אזורים ניתנים לעריכה (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=הצג הערות שנפתרו (Automatic Translation)
 space-between-columns=מרווח בין עמודות (Automatic Translation)
 specific-content=תוכן ספציפי (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=הצג שימושים (Automatic Translation)
 widgets=יישומונים (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=אין לך כל מחלקה. (Automatic Translation)
