--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=View Usages (Automatic Copy)
 widgets=ウィジェット
 x-default={0}（デフォルト）
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=セクションがありません。
