--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
@@ -59,7 +59,7 @@ prioritize-experience=경험 우선 순위 지정 (Automatic Translation)
 publish-page=페이지 게시 (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=열 수를 줄이면 삭제 된 열을 추가 하는 콘텐츠를 손실 됩니다. 당신은 계속 하 시겠습니까? (Automatic Translation)
 remove-background=배경 제거 (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=다시 (Automatic Translation)
 restore-values=값 복원 (Automatic Translation)
 saved=저장 (Automatic Translation)
 saving-changes=변경 내용을 저장... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=템플릿 선택 (Automatic Translation)
 select-the-content-source-for-this-display-page-template=이 표시 페이지 템플릿에 대 한 콘텐츠 원본을 선택 합니다. (Automatic Translation)
 self=자기 (Automatic Translation)
 show-editable-areas=편집 가능한 영역을 표시 (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=해결된 주석 표시 (Automatic Translation)
 space-between-columns=열 사이의 간격 (Automatic Translation)
 specific-content=특정 콘텐츠 (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=사용 보기 (Automatic Translation)
 widgets=위젯 (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=어떤 섹션 필요가 없습니다. (Automatic Translation)
