--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lo.properties
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=View Usages (Automatic Copy)
 widgets=Widgets (Automatic Copy)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=You do not have any sections. (Automatic Copy)
