--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
@@ -59,7 +59,7 @@ prioritize-experience=Приоритетность опыта (Automatic Transla
 publish-page=Страница публикации (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Сокращение числа столбцов потеряет содержимое, добавленное на удаленные столбцы. Вы уверены, что вы хотите продолжить? (Automatic Translation)
 remove-background=Удаление фона (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Открыть (Automatic Translation)
 restore-values=Восстановление значений (Automatic Translation)
 saved=Сохраненные (Automatic Translation)
 saving-changes=Сохранение изменений... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Выберите шаблон (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Выберите источник содержимого для шаблона страницы отображения. (Automatic Translation)
 self=Самоуправления (Automatic Translation)
 show-editable-areas=Показать редактируемых областей (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Показать разрешенные комментарии (Automatic Translation)
 space-between-columns=Расстояние между столбцами (Automatic Translation)
 specific-content=Конкретный контент (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Просмотр использований (Automatic Translation)
 widgets=Виджеты (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Вы не имеют каких-либо разделы. (Automatic Translation)
