--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
@@ -59,7 +59,7 @@ prioritize-experience=Uprednostňovať skúsenosti (Automatic Translation)
 publish-page=Publikovanie stránky (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Zníženie počtu stĺpcov stratia obsah pridaný v odstránených stĺpcoch. Naozaj chcete pokračovať? (Automatic Translation)
 remove-background=Odstrániť pozadie (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Znovu otvoriť (Automatic Translation)
 restore-values=Obnoviť hodnoty (Automatic Translation)
 saved=Uložené (Automatic Translation)
 saving-changes=Uloženie zmien... (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=Vybrať šablónu (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Vyberte zdroj obsahu pre túto šablónu zobrazovaného stránky. (Automatic Translation)
 self=Samostatne (Automatic Translation)
 show-editable-areas=Zobraziť upraviteľných oblastí (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Zobraziť Vyriešené Komentáre (Automatic Translation)
 space-between-columns=Medzera medzi stĺpcami (Automatic Translation)
 specific-content=Špecifický obsah (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=Zobrazenie zvykov (Automatic Translation)
 widgets=Widgety (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=Nemáte žiadne sekcie. (Automatic Translation)
