--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=View Usages (Automatic Copy)
 widgets=விட்ஜெட்ஸ்கள்
 x-default={0} (Default)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=உங்களிடம் எந்த பிரிவுகளும் இல்லை.
