--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
@@ -59,7 +59,7 @@ prioritize-experience=優先考慮體驗 (Automatic Translation)
 publish-page="發佈" 頁 (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=減少列數將丟失添加到已刪除列的內容。確實要繼續嗎？ (Automatic Translation)
 remove-background=移除背景 (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=重新 (Automatic Translation)
 restore-values=還原值 (Automatic Translation)
 saved=保存 (Automatic Translation)
 saving-changes=正在保存更改..。 (Automatic Translation)
@@ -75,7 +75,7 @@ select-template=選擇範本 (Automatic Translation)
 select-the-content-source-for-this-display-page-template=選擇此顯示頁範本的內容源。 (Automatic Translation)
 self=自我 (Automatic Translation)
 show-editable-areas=顯示可編輯區域 (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=顯示已解決的注釋 (Automatic Translation)
 space-between-columns=列之間的空間 (Automatic Translation)
 specific-content=特定內容 (Automatic Translation)
 step-x-of-x=Step {0} of {1} (Automatic Copy)
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages (Automatic Copy)
 view-usages=查看用法 (Automatic Translation)
 widgets=部件 (Automatic Translation)
 x-default={0} (Default) (Automatic Copy)
-x-fields={0} fields (Automatic Copy)
+x-fields={0} Fields (Automatic Copy)
 you-do-not-have-any-sections=您沒有任何部分。 (Automatic Translation)
