--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ca.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Encara no hi ha objectes personalitzats. (Automa
 there-are-no-deployments-yet=Encara no hi ha implementacions. (Automatic Translation)
 there-are-no-form-views-yet=Encara no hi ha cap vista de formulari. (Automatic Translation)
 there-are-no-table-views-yet=Encara no hi ha cap vista de taula. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Giny (Automatic Translation)
