--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_cs.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Dosud neexistují žádné vlastní objekty. (Au
 there-are-no-deployments-yet=Zatím nejsou k dispozici žádná nasazení. (Automatic Translation)
 there-are-no-form-views-yet=Zatím nejsou k dispozici žádná formulářové zobrazení. (Automatic Translation)
 there-are-no-table-views-yet=Zatím nejsou k dispozici žádná zobrazení tabulky. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
