--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_in.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Tidak ada objek kustom belum. (Automatic Transla
 there-are-no-deployments-yet=Belum ada pengerahan. (Automatic Translation)
 there-are-no-form-views-yet=Belum ada tampilan bentuk. (Automatic Translation)
 there-are-no-table-views-yet=Tidak ada tampilan tabel belum. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
