--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_nb.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Det finnes ingen egendefinerte objekter ennå. (
 there-are-no-deployments-yet=Det finnes ingen distribusjoner ennå. (Automatic Translation)
 there-are-no-form-views-yet=Det finnes ingen skjemavisninger ennå. (Automatic Translation)
 there-are-no-table-views-yet=Det er ingen tabellvisninger ennå. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
