--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_pl.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Nie ma jeszcze żadnych obiektów niestandardowy
 there-are-no-deployments-yet=Nie ma jeszcze wdrożeń. (Automatic Translation)
 there-are-no-form-views-yet=Nie ma jeszcze widoków formularzy. (Automatic Translation)
 there-are-no-table-views-yet=Nie ma jeszcze widoków tabeli. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
