--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_tr.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Henüz özel nesne yok. (Automatic Translation)
 there-are-no-deployments-yet=Henüz dağıtım yok. (Automatic Translation)
 there-are-no-form-views-yet=Henüz form görünümü yok. (Automatic Translation)
 there-are-no-table-views-yet=Henüz masa görünümü yok. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
