--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_zh_CN.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=还没有自定义对象。 (Automatic Translati
 there-are-no-deployments-yet=尚未部署。 (Automatic Translation)
 there-are-no-form-views-yet=尚没有窗体视图。 (Automatic Translation)
 there-are-no-table-views-yet=还没有表视图。 (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=部件 (Automatic Translation)
