--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_es.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Todavía no hay objetos personalizados. (Automat
 there-are-no-deployments-yet=Todavía no hay implementaciones. (Automatic Translation)
 there-are-no-form-views-yet=Todavía no hay vistas de formulario. (Automatic Translation)
 there-are-no-table-views-yet=Todavía no hay vistas de tabla. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
