--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_et.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Pole veel kohandatud objekte. (Automatic Transla
 there-are-no-deployments-yet=Pole veel juurutusi. (Automatic Translation)
 there-are-no-form-views-yet=Vormivaateid pole veel. (Automatic Translation)
 there-are-no-table-views-yet=Ühtegi tabelivaadet pole veel. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Vidina (Automatic Translation)
