--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_fa.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=هنوز اشیای سفارشی وجود ندا
 there-are-no-deployments-yet=هنوز هیچ استقرار وجود دارد. (Automatic Translation)
 there-are-no-form-views-yet=هیچ مشاهدات فرم وجود دارد. (Automatic Translation)
 there-are-no-table-views-yet=هنوز هیچ نمایش جدول وجود دارد. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=ویدجت (Automatic Translation)
