--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_fr.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Il n'y a pas encore d'objets personnalisés. (Au
 there-are-no-deployments-yet=Il n'y a pas encore de déploiements. (Automatic Translation)
 there-are-no-form-views-yet=Il n'y a pas encore de vues de formulaire. (Automatic Translation)
 there-are-no-table-views-yet=Il n'y a pas encore de table de vue. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=bitoniau (Automatic Translation)
