--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_gl.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=There are no custom objects yet. (Automatic Copy
 there-are-no-deployments-yet=There are no deployments yet. (Automatic Copy)
 there-are-no-form-views-yet=There are no form views yet. (Automatic Copy)
 there-are-no-table-views-yet=There are no table views yet. (Automatic Copy)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Copy)
