--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_hu.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Még nincsenek egyéni objektumok. (Automatic Tr
 there-are-no-deployments-yet=Még nincsenek telepítések. (Automatic Translation)
 there-are-no-form-views-yet=Még nincsenek űrlapnézetek. (Automatic Translation)
 there-are-no-table-views-yet=Még nincsenek táblnézetek. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
