--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_it.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Non ci sono ancora oggetti personalizzati. (Auto
 there-are-no-deployments-yet=Non ci sono ancora distribuzioni. (Automatic Translation)
 there-are-no-form-views-yet=Non ci sono ancora visualizzazioni del modulo. (Automatic Translation)
 there-are-no-table-views-yet=Non ci sono ancora viste tabella. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
