--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ko.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=아직 사용자 지정 개체가 없습니다. 
 there-are-no-deployments-yet=아직 배포가 없습니다. (Automatic Translation)
 there-are-no-form-views-yet=양식 보기는 아직 없습니다. (Automatic Translation)
 there-are-no-table-views-yet=아직 테이블 뷰가 없습니다. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=위젯 (Automatic Translation)
