--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_lt.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Dar nėra pasirinktinių objektų. (Automatic Tr
 there-are-no-deployments-yet=Dar nėra dislokavimo. (Automatic Translation)
 there-are-no-form-views-yet=Dar nėra formos rodinių. (Automatic Translation)
 there-are-no-table-views-yet=Dar nėra lentelės rodinių. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Valdikliui (Automatic Translation)
