--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_pt_PT.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Ainda não há objetos personalizados. (Automati
 there-are-no-deployments-yet=Ainda não há implantações. (Automatic Translation)
 there-are-no-form-views-yet=Ainda não há modos de exibição de formulário. (Automatic Translation)
 there-are-no-table-views-yet=Ainda não há vistas de mesa. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
