--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ro.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Nu există încă obiecte particularizate. (Auto
 there-are-no-deployments-yet=Nu există încă implementări. (Automatic Translation)
 there-are-no-form-views-yet=Nu există încă vizualizări de formular. (Automatic Translation)
 there-are-no-table-views-yet=Nu există încă vedere la masă. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
