--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_sk.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Zatiaľ neexistujú žiadne vlastné objekty. (A
 there-are-no-deployments-yet=Zatiaľ nie sú žiadne nasadenia. (Automatic Translation)
 there-are-no-form-views-yet=Zatiaľ nie sú žiadne zobrazenia formulárov. (Automatic Translation)
 there-are-no-table-views-yet=Zatiaľ nie sú žiadne zobrazenia tabuľky. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
