--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_sl.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=Še ni predmetov po meri. (Automatic Translation
 there-are-no-deployments-yet=Nobenega uvajanja še ni. (Automatic Translation)
 there-are-no-form-views-yet=Še ni pogledov na obrazce. (Automatic Translation)
 there-are-no-table-views-yet=Še ni pogledov na tabele. (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=Widget (Automatic Translation)
