--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_th.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=ยังไม่มีวัตถุที่
 there-are-no-deployments-yet=ยังไม่มีการปรับใช้ (Automatic Translation)
 there-are-no-form-views-yet=ยังไม่มีมุมมองฟอร์ม (Automatic Translation)
 there-are-no-table-views-yet=ยังไม่มีมุมมองตาราง (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=วิด เจ็ต (Automatic Translation)
