--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_zh_TW.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=還沒有自訂物件。 (Automatic Translation)
 there-are-no-deployments-yet=尚未部署。 (Automatic Translation)
 there-are-no-form-views-yet=尚沒有表單檢視。 (Automatic Translation)
 there-are-no-table-views-yet=還沒有表視圖。 (Automatic Translation)
+untitled-table-view=Untitled Table View (Automatic Copy)
 widget=部件 (Automatic Translation)
